// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Form accessibility Box with TextInput in Form should 
  have no accessibility violations 1`] = `
.c0 {
  font-size: 18px;
  line-height: 24px;
  box-sizing: border-box;
  -webkit-text-size-adjust: 100%;
  -ms-text-size-adjust: 100%;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  margin-bottom: 12px;
  min-width: 0;
  min-height: 0;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  border-bottom: solid 1px rgba(0,0,0,0.33);
  min-width: 0;
  min-height: 0;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  overflow: hidden;
}

.c3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  min-width: 0;
  min-height: 0;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c5 {
  box-sizing: border-box;
  font-size: inherit;
  font-family: inherit;
  border: none;
  -webkit-appearance: none;
  background: transparent;
  color: inherit;
  padding: 11px;
  font-weight: 600;
  margin: 0;
  border: 1px solid rgba(0,0,0,0.33);
  border-radius: 4px;
  width: 100%;
}

.c5::-webkit-search-decoration {
  -webkit-appearance: none;
}

.c5::-webkit-input-placeholder {
  color: #AAAAAA;
}

.c5::-moz-placeholder {
  color: #AAAAAA;
}

.c5:-ms-input-placeholder {
  color: #AAAAAA;
}

.c5::-moz-focus-inner {
  border: none;
  outline: none;
}

.c4 {
  position: relative;
  width: 100%;
}

@media only screen and (max-width:768px) {
  .c1 {
    margin-bottom: 6px;
  }
}

@media only screen and (max-width:768px) {
  .c2 {
    border-bottom: solid 1px rgba(0,0,0,0.33);
  }
}

<div
  class="c0"
>
  <form>
    <div
      class="c1 "
    >
      <div
        class="c2 "
      >
        <div
          class="c3"
        >
          <div
            class="c4"
          >
            <input
              aria-label="test"
              autocomplete="off"
              class="c5"
              value=""
            />
          </div>
        </div>
      </div>
    </div>
  </form>
</div>
`;

exports[`Form accessibility CheckBox in Form should have no accessibility violations 1`] = `
.c0 {
  font-size: 18px;
  line-height: 24px;
  box-sizing: border-box;
  -webkit-text-size-adjust: 100%;
  -ms-text-size-adjust: 100%;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  margin-bottom: 12px;
  min-width: 0;
  min-height: 0;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  border-bottom: solid 1px rgba(0,0,0,0.33);
  min-width: 0;
  min-height: 0;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  padding: 12px;
  overflow: hidden;
}

.c4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  margin-right: 12px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  min-width: 0;
  min-height: 0;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

.c7 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  border: solid 2px rgba(0,0,0,0.15);
  min-width: 0;
  min-height: 0;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  height: 24px;
  width: 24px;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  border-radius: 4px;
}

.c3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
  cursor: pointer;
}

.c3:hover input:not([disabled]) + div,
.c3:hover input:not([disabled]) + span {
  border-color: #000000;
}

.c6 {
  opacity: 0;
  -moz-appearance: none;
  width: 0;
  height: 0;
  margin: 0;
  cursor: pointer;
}

.c6:checked + span > span {
  left: calc( 48px - 24px );
  background: #7D4CDB;
}

.c5 {
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
}

@media only screen and (max-width:768px) {
  .c1 {
    margin-bottom: 6px;
  }
}

@media only screen and (max-width:768px) {
  .c2 {
    border-bottom: solid 1px rgba(0,0,0,0.33);
  }
}

@media only screen and (max-width:768px) {
  .c2 {
    padding: 6px;
  }
}

@media only screen and (max-width:768px) {
  .c4 {
    margin-right: 6px;
  }
}

@media only screen and (max-width:768px) {
  .c7 {
    border: solid 2px rgba(0,0,0,0.15);
  }
}

<div
  class="c0"
>
  <form>
    <div
      class="c1 "
    >
      <div
        class="c2 "
      >
        <label
          class="c3"
        >
          <div
            class="c4 c5"
          >
            <input
              class="c6"
              type="checkbox"
            />
            <div
              class="c7 "
            />
          </div>
          <span>
            test
          </span>
        </label>
      </div>
    </div>
  </form>
</div>
`;

exports[`Form accessibility FormField with an explicit TextInput child
  should have no accessibility violations 1`] = `
.c0 {
  font-size: 18px;
  line-height: 24px;
  box-sizing: border-box;
  -webkit-text-size-adjust: 100%;
  -ms-text-size-adjust: 100%;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  margin-bottom: 12px;
  min-width: 0;
  min-height: 0;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  border-bottom: solid 1px rgba(0,0,0,0.33);
  min-width: 0;
  min-height: 0;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  overflow: hidden;
}

.c4 {
  box-sizing: border-box;
  font-size: inherit;
  font-family: inherit;
  border: none;
  -webkit-appearance: none;
  background: transparent;
  color: inherit;
  padding: 11px;
  font-weight: 600;
  margin: 0;
  border: 1px solid rgba(0,0,0,0.33);
  border-radius: 4px;
  width: 100%;
  outline: none;
  border: none;
}

.c4::-webkit-search-decoration {
  -webkit-appearance: none;
}

.c4::-webkit-input-placeholder {
  color: #AAAAAA;
}

.c4::-moz-placeholder {
  color: #AAAAAA;
}

.c4:-ms-input-placeholder {
  color: #AAAAAA;
}

.c4::-moz-focus-inner {
  border: none;
  outline: none;
}

.c3 {
  position: relative;
  width: 100%;
}

@media only screen and (max-width:768px) {
  .c1 {
    margin-bottom: 6px;
  }
}

@media only screen and (max-width:768px) {
  .c2 {
    border-bottom: solid 1px rgba(0,0,0,0.33);
  }
}

<div
  class="c0"
>
  <form>
    <div
      class="c1 "
    >
      <div
        class="c2 "
      >
        <div
          class="c3"
        >
          <input
            aria-label="test"
            autocomplete="off"
            class="c4"
            value=""
          />
        </div>
      </div>
    </div>
  </form>
</div>
`;

exports[`Form accessibility Select in Form should have no accessibility violations 1`] = `
.c10 {
  display: inline-block;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  width: 24px;
  height: 24px;
  fill: #7D4CDB;
  stroke: #7D4CDB;
}

.c10 g {
  fill: inherit;
  stroke: inherit;
}

.c10 *:not([stroke])[fill="none"] {
  stroke-width: 0;
}

.c10 *[stroke*="#"],
.c10 *[STROKE*="#"] {
  stroke: inherit;
  fill: none;
}

.c10 *[fill-rule],
.c10 *[FILL-RULE],
.c10 *[fill*="#"],
.c10 *[FILL*="#"] {
  fill: inherit;
  stroke: none;
}

.c0 {
  font-size: 18px;
  line-height: 24px;
  box-sizing: border-box;
  -webkit-text-size-adjust: 100%;
  -ms-text-size-adjust: 100%;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  margin-bottom: 12px;
  min-width: 0;
  min-height: 0;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  border-bottom: solid 1px rgba(0,0,0,0.33);
  min-width: 0;
  min-height: 0;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  overflow: hidden;
}

.c4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  min-width: 0;
  min-height: 0;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
}

.c5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  box-sizing: border-box;
  min-width: 0;
  min-height: 0;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-flex: 1 1;
  -ms-flex: 1 1;
  flex: 1 1;
  -webkit-flex-basis: auto;
  -ms-flex-preferred-size: auto;
  flex-basis: auto;
}

.c9 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  margin-left: 12px;
  margin-right: 12px;
  min-width: 0;
  min-height: 0;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
}

.c3 {
  display: inline-block;
  box-sizing: border-box;
  cursor: pointer;
  font: inherit;
  -webkit-text-decoration: none;
  text-decoration: none;
  margin: 0;
  background: transparent;
  overflow: visible;
  text-transform: none;
  color: inherit;
  outline: none;
  border: none;
  padding: 0;
  text-align: inherit;
}

.c7 {
  box-sizing: border-box;
  font-size: inherit;
  font-family: inherit;
  border: none;
  -webkit-appearance: none;
  background: transparent;
  color: inherit;
  padding: 11px;
  font-weight: 600;
  margin: 0;
  border: 1px solid rgba(0,0,0,0.33);
  border-radius: 4px;
  width: 100%;
  outline: none;
  border: none;
}

.c7::-webkit-search-decoration {
  -webkit-appearance: none;
}

.c7::-webkit-input-placeholder {
  color: #AAAAAA;
}

.c7::-moz-placeholder {
  color: #AAAAAA;
}

.c7:-ms-input-placeholder {
  color: #AAAAAA;
}

.c7::-moz-focus-inner {
  border: none;
  outline: none;
}

.c6 {
  position: relative;
  width: 100%;
}

.c8 {
  cursor: pointer;
}

@media only screen and (max-width:768px) {
  .c1 {
    margin-bottom: 6px;
  }
}

@media only screen and (max-width:768px) {
  .c2 {
    border-bottom: solid 1px rgba(0,0,0,0.33);
  }
}

@media only screen and (max-width:768px) {
  .c9 {
    margin-left: 6px;
    margin-right: 6px;
  }
}

<div
  class="c0"
>
  <form>
    <div
      class="c1 "
    >
      <div
        class="c2 "
      >
        <button
          aria-label="Open Drop"
          class="c3 "
          type="button"
        >
          <div
            class="c4"
          >
            <div
              class="c5"
            >
              <div
                class="c6"
              >
                <input
                  aria-label="test"
                  autocomplete="off"
                  class="c7 c8"
                  readonly=""
                  tabindex="-1"
                  type="text"
                  value=""
                />
              </div>
            </div>
            <div
              class="c9"
              style="min-width: auto;"
            >
              <svg
                aria-label="FormDown"
                class="c10"
                viewBox="0 0 24 24"
              >
                <polyline
                  fill="none"
                  points="18 9 12 15 6 9"
                  stroke="#000"
                  stroke-width="2"
                />
              </svg>
            </div>
          </div>
        </button>
      </div>
    </div>
  </form>
</div>
`;

exports[`Form accessibility TextInput in Form should have 
  no accessibility violations 1`] = `
.c0 {
  font-size: 18px;
  line-height: 24px;
  box-sizing: border-box;
  -webkit-text-size-adjust: 100%;
  -ms-text-size-adjust: 100%;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  margin-bottom: 12px;
  min-width: 0;
  min-height: 0;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  border-bottom: solid 1px rgba(0,0,0,0.33);
  min-width: 0;
  min-height: 0;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  overflow: hidden;
}

.c4 {
  box-sizing: border-box;
  font-size: inherit;
  font-family: inherit;
  border: none;
  -webkit-appearance: none;
  background: transparent;
  color: inherit;
  padding: 11px;
  font-weight: 600;
  margin: 0;
  border: 1px solid rgba(0,0,0,0.33);
  border-radius: 4px;
  width: 100%;
  outline: none;
  border: none;
}

.c4::-webkit-search-decoration {
  -webkit-appearance: none;
}

.c4::-webkit-input-placeholder {
  color: #AAAAAA;
}

.c4::-moz-placeholder {
  color: #AAAAAA;
}

.c4:-ms-input-placeholder {
  color: #AAAAAA;
}

.c4::-moz-focus-inner {
  border: none;
  outline: none;
}

.c3 {
  position: relative;
  width: 100%;
}

@media only screen and (max-width:768px) {
  .c1 {
    margin-bottom: 6px;
  }
}

@media only screen and (max-width:768px) {
  .c2 {
    border-bottom: solid 1px rgba(0,0,0,0.33);
  }
}

<div
  class="c0"
>
  <form>
    <div
      class="c1 "
    >
      <div
        class="c2 "
      >
        <div
          class="c3"
        >
          <input
            aria-label="test"
            autocomplete="off"
            class="c4"
            value=""
          />
        </div>
      </div>
    </div>
  </form>
</div>
`;

exports[`Form uncontrolled empty 1`] = `
.c0 {
  font-size: 18px;
  line-height: 24px;
  box-sizing: border-box;
  -webkit-text-size-adjust: 100%;
  -ms-text-size-adjust: 100%;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
}

<div
  className="c0"
>
  <form
    onReset={[Function]}
    onSubmit={[Function]}
  />
</div>
`;

exports[`Form uncontrolled errors 1`] = `
.c0 {
  font-size: 18px;
  line-height: 24px;
  box-sizing: border-box;
  -webkit-text-size-adjust: 100%;
  -ms-text-size-adjust: 100%;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  margin-bottom: 12px;
  min-width: 0;
  min-height: 0;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  border-bottom: solid 1px #FF4040;
  min-width: 0;
  min-height: 0;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  overflow: hidden;
}

.c5 {
  margin-left: 12px;
  margin-right: 12px;
  margin-top: 6px;
  margin-bottom: 6px;
  font-size: 18px;
  line-height: 24px;
  color: #FF4040;
}

.c4 {
  box-sizing: border-box;
  font-size: inherit;
  font-family: inherit;
  border: none;
  -webkit-appearance: none;
  background: transparent;
  color: inherit;
  padding: 11px;
  font-weight: 600;
  margin: 0;
  border: 1px solid rgba(0,0,0,0.33);
  border-radius: 4px;
  width: 100%;
  outline: none;
  border: none;
}

.c4::-webkit-search-decoration {
  -webkit-appearance: none;
}

.c4::-webkit-input-placeholder {
  color: #AAAAAA;
}

.c4::-moz-placeholder {
  color: #AAAAAA;
}

.c4:-ms-input-placeholder {
  color: #AAAAAA;
}

.c4::-moz-focus-inner {
  border: none;
  outline: none;
}

.c3 {
  position: relative;
  width: 100%;
}

@media only screen and (max-width:768px) {
  .c1 {
    margin-bottom: 6px;
  }
}

@media only screen and (max-width:768px) {
  .c2 {
    border-bottom: solid 1px #FF4040;
  }
}

<div
  className="c0"
>
  <form
    onReset={[Function]}
    onSubmit={[Function]}
  >
    <div
      className="c1 "
      onBlur={[Function]}
      onFocus={[Function]}
    >
      <div
        className="c2 "
      >
        <div
          className="c3"
        >
          <input
            aria-invalid={true}
            autoComplete="off"
            className="c4"
            name="test"
            onBlur={[Function]}
            onChange={[Function]}
            onFocus={[Function]}
            onKeyDown={[Function]}
          />
        </div>
      </div>
      <span
        className="c5"
      >
        missing
      </span>
    </div>
  </form>
</div>
`;

exports[`Form uncontrolled infos 1`] = `
.c0 {
  font-size: 18px;
  line-height: 24px;
  box-sizing: border-box;
  -webkit-text-size-adjust: 100%;
  -ms-text-size-adjust: 100%;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  margin-bottom: 12px;
  min-width: 0;
  min-height: 0;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  border-bottom: solid 1px rgba(0,0,0,0.33);
  min-width: 0;
  min-height: 0;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  overflow: hidden;
}

.c5 {
  margin-left: 12px;
  margin-right: 12px;
  margin-top: 6px;
  margin-bottom: 6px;
  font-size: 18px;
  line-height: 24px;
  color: #666666;
}

.c4 {
  box-sizing: border-box;
  font-size: inherit;
  font-family: inherit;
  border: none;
  -webkit-appearance: none;
  background: transparent;
  color: inherit;
  padding: 11px;
  font-weight: 600;
  margin: 0;
  border: 1px solid rgba(0,0,0,0.33);
  border-radius: 4px;
  width: 100%;
  outline: none;
  border: none;
}

.c4::-webkit-search-decoration {
  -webkit-appearance: none;
}

.c4::-webkit-input-placeholder {
  color: #AAAAAA;
}

.c4::-moz-placeholder {
  color: #AAAAAA;
}

.c4:-ms-input-placeholder {
  color: #AAAAAA;
}

.c4::-moz-focus-inner {
  border: none;
  outline: none;
}

.c3 {
  position: relative;
  width: 100%;
}

@media only screen and (max-width:768px) {
  .c1 {
    margin-bottom: 6px;
  }
}

@media only screen and (max-width:768px) {
  .c2 {
    border-bottom: solid 1px rgba(0,0,0,0.33);
  }
}

<div
  className="c0"
>
  <form
    onReset={[Function]}
    onSubmit={[Function]}
  >
    <div
      className="c1 "
      onBlur={[Function]}
      onFocus={[Function]}
    >
      <div
        className="c2 "
      >
        <div
          className="c3"
        >
          <input
            autoComplete="off"
            className="c4"
            name="test"
            onBlur={[Function]}
            onChange={[Function]}
            onFocus={[Function]}
            onKeyDown={[Function]}
          />
        </div>
      </div>
      <span
        className="c5"
      >
        missing
      </span>
    </div>
  </form>
</div>
`;

exports[`Form uncontrolled regexp validation 1`] = `
.c0 {
  margin-left: 12px;
  margin-right: 12px;
  margin-top: 6px;
  margin-bottom: 6px;
  font-size: 18px;
  line-height: 24px;
  color: #FF4040;
}

@media only screen and (max-width:768px) {

}

@media only screen and (max-width:768px) {

}

@media only screen and (max-width:768px) {

}

<span
  class="c0"
>
  invalid
</span>
`;

exports[`Form uncontrolled regexp validation with status 1`] = `
Array [
  .c0 {
  margin-left: 12px;
  margin-right: 12px;
  margin-top: 6px;
  margin-bottom: 6px;
  font-size: 18px;
  line-height: 24px;
  color: #FF4040;
}

@media only screen and (max-width:768px) {

}

@media only screen and (max-width:768px) {

}

<span
    class="c0"
  >
    invalid
  </span>,
  .c0 {
  margin-left: 12px;
  margin-right: 12px;
  margin-top: 6px;
  margin-bottom: 6px;
  font-size: 18px;
  line-height: 24px;
  color: #666666;
}

@media only screen and (max-width:768px) {

}

@media only screen and (max-width:768px) {

}

<span
    class="c0"
  >
    invalid
  </span>,
]
`;

exports[`Form uncontrolled required validation 1`] = `
.c0 {
  margin-left: 12px;
  margin-right: 12px;
  margin-top: 6px;
  margin-bottom: 6px;
  font-size: 18px;
  line-height: 24px;
  color: #FF4040;
}

@media only screen and (max-width:768px) {

}

@media only screen and (max-width:768px) {

}

@media only screen and (max-width:768px) {

}

<span
  class="c0"
>
  required
</span>
`;

exports[`Form uncontrolled uncontrolled 1`] = `
.c0 {
  font-size: 18px;
  line-height: 24px;
  box-sizing: border-box;
  -webkit-text-size-adjust: 100%;
  -ms-text-size-adjust: 100%;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  margin-bottom: 12px;
  min-width: 0;
  min-height: 0;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  border-bottom: solid 1px rgba(0,0,0,0.33);
  min-width: 0;
  min-height: 0;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  overflow: hidden;
}

.c5 {
  display: inline-block;
  box-sizing: border-box;
  cursor: pointer;
  font: inherit;
  -webkit-text-decoration: none;
  text-decoration: none;
  margin: 0;
  background: transparent;
  overflow: visible;
  text-transform: none;
  border: 2px solid #7D4CDB;
  border-radius: 18px;
  color: #444444;
  padding: 4px 22px;
  font-size: 18px;
  line-height: 24px;
  background-color: #7D4CDB;
  color: #f8f8f8;
  border-radius: 18px;
  -webkit-transition-property: color,background-color,border-color,box-shadow;
  transition-property: color,background-color,border-color,box-shadow;
  -webkit-transition-duration: 0.1s;
  transition-duration: 0.1s;
  -webkit-transition-timing-function: ease-in-out;
  transition-timing-function: ease-in-out;
}

.c5:hover {
  box-shadow: 0px 0px 0px 2px #7D4CDB;
}

.c4 {
  box-sizing: border-box;
  font-size: inherit;
  font-family: inherit;
  border: none;
  -webkit-appearance: none;
  background: transparent;
  color: inherit;
  padding: 11px;
  font-weight: 600;
  margin: 0;
  border: 1px solid rgba(0,0,0,0.33);
  border-radius: 4px;
  width: 100%;
  outline: none;
  border: none;
}

.c4::-webkit-search-decoration {
  -webkit-appearance: none;
}

.c4::-webkit-input-placeholder {
  color: #AAAAAA;
}

.c4::-moz-placeholder {
  color: #AAAAAA;
}

.c4:-ms-input-placeholder {
  color: #AAAAAA;
}

.c4::-moz-focus-inner {
  border: none;
  outline: none;
}

.c3 {
  position: relative;
  width: 100%;
}

@media only screen and (max-width:768px) {
  .c1 {
    margin-bottom: 6px;
  }
}

@media only screen and (max-width:768px) {
  .c2 {
    border-bottom: solid 1px rgba(0,0,0,0.33);
  }
}

<div
  class="c0"
>
  <form>
    <div
      class="c1 "
    >
      <div
        class="c2 "
      >
        <div
          class="c3"
        >
          <input
            autocomplete="off"
            class="c4"
            name="test"
            placeholder="test input"
            value=""
          />
        </div>
      </div>
    </div>
    <button
      class="c5"
      type="submit"
    >
      Submit
    </button>
  </form>
</div>
`;

exports[`Form uncontrolled uncontrolled 2`] = `
<div
  class="StyledGrommet-sc-19lkkz7-0 lcXYAf"
>
  <form>
    <div
      class="StyledBox-sc-13pk1d4-0 dtCrhk FormField__FormFieldBox-m9hood-0 eenrNp"
    >
      <div
        class="StyledBox-sc-13pk1d4-0 kGPDbB FormField__FormFieldContentBox-m9hood-1 ckZStK"
      >
        <div
          class="StyledTextInput__StyledTextInputContainer-sc-1x30a0s-1 ksQrmr"
        >
          <input
            autocomplete="off"
            class="StyledTextInput-sc-1x30a0s-0 jsQcHW"
            name="test"
            placeholder="test input"
            value=""
          />
        </div>
      </div>
    </div>
    <button
      class="StyledButton-sc-323bzc-0 kIXxtf"
      type="submit"
    >
      Submit
    </button>
  </form>
</div>
`;

exports[`Form uncontrolled uncontrolled 3`] = `
<div
  class="StyledGrommet-sc-19lkkz7-0 lcXYAf"
>
  <form>
    <div
      class="StyledBox-sc-13pk1d4-0 dtCrhk FormField__FormFieldBox-m9hood-0 eenrNp"
    >
      <div
        class="StyledBox-sc-13pk1d4-0 kGPDbB FormField__FormFieldContentBox-m9hood-1 ckZStK"
      >
        <div
          class="StyledTextInput__StyledTextInputContainer-sc-1x30a0s-1 ksQrmr"
        >
          <input
            autocomplete="off"
            class="StyledTextInput-sc-1x30a0s-0 jsQcHW"
            name="test"
            placeholder="test input"
            value=""
          />
        </div>
      </div>
    </div>
    <button
      class="StyledButton-sc-323bzc-0 kIXxtf"
      type="submit"
    >
      Submit
    </button>
  </form>
</div>
`;

exports[`Form uncontrolled update 1`] = `
.c0 {
  font-size: 18px;
  line-height: 24px;
  box-sizing: border-box;
  -webkit-text-size-adjust: 100%;
  -ms-text-size-adjust: 100%;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  margin-bottom: 12px;
  min-width: 0;
  min-height: 0;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  border-bottom: solid 1px rgba(0,0,0,0.33);
  min-width: 0;
  min-height: 0;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  overflow: hidden;
}

.c5 {
  display: inline-block;
  box-sizing: border-box;
  cursor: pointer;
  font: inherit;
  -webkit-text-decoration: none;
  text-decoration: none;
  margin: 0;
  background: transparent;
  overflow: visible;
  text-transform: none;
  border: 2px solid #7D4CDB;
  border-radius: 18px;
  color: #444444;
  padding: 4px 22px;
  font-size: 18px;
  line-height: 24px;
  background-color: #7D4CDB;
  color: #f8f8f8;
  border-radius: 18px;
  -webkit-transition-property: color,background-color,border-color,box-shadow;
  transition-property: color,background-color,border-color,box-shadow;
  -webkit-transition-duration: 0.1s;
  transition-duration: 0.1s;
  -webkit-transition-timing-function: ease-in-out;
  transition-timing-function: ease-in-out;
}

.c5:hover {
  box-shadow: 0px 0px 0px 2px #7D4CDB;
}

.c4 {
  box-sizing: border-box;
  font-size: inherit;
  font-family: inherit;
  border: none;
  -webkit-appearance: none;
  background: transparent;
  color: inherit;
  padding: 11px;
  font-weight: 600;
  margin: 0;
  border: 1px solid rgba(0,0,0,0.33);
  border-radius: 4px;
  width: 100%;
  outline: none;
  border: none;
}

.c4::-webkit-search-decoration {
  -webkit-appearance: none;
}

.c4::-webkit-input-placeholder {
  color: #AAAAAA;
}

.c4::-moz-placeholder {
  color: #AAAAAA;
}

.c4:-ms-input-placeholder {
  color: #AAAAAA;
}

.c4::-moz-focus-inner {
  border: none;
  outline: none;
}

.c3 {
  position: relative;
  width: 100%;
}

@media only screen and (max-width:768px) {
  .c1 {
    margin-bottom: 6px;
  }
}

@media only screen and (max-width:768px) {
  .c2 {
    border-bottom: solid 1px rgba(0,0,0,0.33);
  }
}

<div
  class="c0"
>
  <form>
    <div
      class="c1 "
    >
      <div
        class="c2 "
      >
        <div
          class="c3"
        >
          <input
            autocomplete="off"
            class="c4"
            name="test"
            placeholder="test input"
            value=""
          />
        </div>
      </div>
    </div>
    <div
      class="c1 "
    >
      <div
        class="c2 "
      >
        <div
          class="c3"
        >
          <input
            autocomplete="off"
            class="c4"
            name="test2"
            placeholder="test-2 input"
            value=""
          />
        </div>
      </div>
    </div>
    <button
      class="c5"
      type="submit"
    >
      Submit
    </button>
  </form>
</div>
`;

exports[`Form uncontrolled validate 1`] = `
.c0 {
  margin-left: 12px;
  margin-right: 12px;
  margin-top: 6px;
  margin-bottom: 6px;
  font-size: 18px;
  line-height: 24px;
  color: #FF4040;
}

@media only screen and (max-width:768px) {

}

@media only screen and (max-width:768px) {

}

@media only screen and (max-width:768px) {

}

<span
  class="c0"
>
  simple string
</span>
`;

exports[`Form uncontrolled validate 2`] = `
.c0 {
  font-size: 18px;
  line-height: 24px;
}

@media only screen and (max-width:768px) {

}

@media only screen and (max-width:768px) {

}

@media only screen and (max-width:768px) {

}

@media only screen and (max-width:768px) {

}

@media only screen and (max-width:768px) {

}

<span
  class="c0"
>
   ReactNode 
</span>
`;

exports[`Form uncontrolled validate 3`] = `
.c0 {
  margin-left: 12px;
  margin-right: 12px;
  margin-top: 6px;
  margin-bottom: 6px;
  font-size: 18px;
  line-height: 24px;
  color: #FF4040;
}

@media only screen and (max-width:768px) {

}

@media only screen and (max-width:768px) {

}

@media only screen and (max-width:768px) {

}

@media only screen and (max-width:768px) {

}

@media only screen and (max-width:768px) {

}

<span
  class="c0"
>
  status error
</span>
`;

exports[`Form uncontrolled validate 4`] = `
.c0 {
  margin-left: 12px;
  margin-right: 12px;
  margin-top: 6px;
  margin-bottom: 6px;
  font-size: 18px;
  line-height: 24px;
  color: #666666;
}

@media only screen and (max-width:768px) {

}

@media only screen and (max-width:768px) {

}

@media only screen and (max-width:768px) {

}

@media only screen and (max-width:768px) {

}

@media only screen and (max-width:768px) {

}

<span
  class="c0"
>
  status info
</span>
`;

exports[`Form uncontrolled with field 1`] = `
.c0 {
  font-size: 18px;
  line-height: 24px;
  box-sizing: border-box;
  -webkit-text-size-adjust: 100%;
  -ms-text-size-adjust: 100%;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  margin-bottom: 12px;
  min-width: 0;
  min-height: 0;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  border-bottom: solid 1px rgba(0,0,0,0.33);
  min-width: 0;
  min-height: 0;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  overflow: hidden;
}

.c4 {
  box-sizing: border-box;
  font-size: inherit;
  font-family: inherit;
  border: none;
  -webkit-appearance: none;
  background: transparent;
  color: inherit;
  padding: 11px;
  font-weight: 600;
  margin: 0;
  border: 1px solid rgba(0,0,0,0.33);
  border-radius: 4px;
  width: 100%;
  outline: none;
  border: none;
}

.c4::-webkit-search-decoration {
  -webkit-appearance: none;
}

.c4::-webkit-input-placeholder {
  color: #AAAAAA;
}

.c4::-moz-placeholder {
  color: #AAAAAA;
}

.c4:-ms-input-placeholder {
  color: #AAAAAA;
}

.c4::-moz-focus-inner {
  border: none;
  outline: none;
}

.c3 {
  position: relative;
  width: 100%;
}

@media only screen and (max-width:768px) {
  .c1 {
    margin-bottom: 6px;
  }
}

@media only screen and (max-width:768px) {
  .c2 {
    border-bottom: solid 1px rgba(0,0,0,0.33);
  }
}

<div
  className="c0"
>
  <form
    onReset={[Function]}
    onSubmit={[Function]}
  >
    <div
      className="c1 "
      onBlur={[Function]}
      onFocus={[Function]}
    >
      <div
        className="c2 "
      >
        <div
          className="c3"
        >
          <input
            autoComplete="off"
            className="c4"
            name="test"
            onBlur={[Function]}
            onChange={[Function]}
            onFocus={[Function]}
            onKeyDown={[Function]}
          />
        </div>
      </div>
    </div>
  </form>
</div>
`;
